switch to electron-forge

--- a/src/assets/html/index.html
+++ b/src/assets/html/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <title>Webcam Broadcaster</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
             <select name="device" id="device" required>
                 <!--     <option value="DroidCam Source 3">DroidCam Source 3</option> -->
             </select>
-            <img id="update-icon" src="assets/img/update-arrows-2.png" alt="refresh">
+            <img id="update-icon" src="../img/update-arrows.png" alt="refresh">
             <label for="bitrate">Качество</label>
             <select name="bitrate" id="bitrate" required>
                 <option value="2000">Высокое</option>
@@ -38,10 +38,10 @@
     <footer>
         <p>Версия: <span id="version"></span></p>
         <p>© Copyright 2021, Medvedev Denis</p>
-        <a href="https://github.com/raziEiL"><img src="assets/img/GitHub-Mark-32px.png" alt="GitHub"></a>
+        <a href="https://github.com/raziEiL"><img src="../img/GitHub-Mark-32px.png" alt="GitHub"></a>
     </footer>
     <!-- You can also require other files to run in this process -->
-    <!--    <script src="./assets/js-render/js.cookie.js"></script> -->
+    <!--    <script src=""></script> -->
 </body>
 
 </html>
