--- a/src/assets/html/index.html
+++ b/src/assets/html/index.html
@@ -6,7 +6,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Webcam Broadcaster</title>
+    <title>JSMpeg Webcam Broadcaster</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
