allow connect to http servers

--- a/src/assets/html/index.html
+++ b/src/assets/html/index.html
@@ -14,7 +14,7 @@
     <main>
         <form>
             <label for="url">Сервер</label>
-            <input type="url" id="url" name="url" pattern="https://.*" placeholder="https://example.com" required>
+            <input type="url" id="url" name="url" pattern="https?:\/\/.*" placeholder="https://example.com" required>
             <label for="pw">Ключ потока</label>
             <input type="password" id="auth" name="auth" value="">
             <label for="device">Источник</label>
